--- a/project/index.html
+++ b/project/index.html
@@ -26,6 +26,8 @@
         
     </header>
 
+
+
 <section>
     <main id="main">
         <div class="movie">
@@ -41,6 +43,16 @@
         </div>
     </main>
 </section>
+
+
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content" id="modal-content">
+      <span class="close">&times;</span>
+    </div>
+  
+  </div>
 
     <!-- მოთხოვნადი ფილმები   -->
 
