--- a/project/startingpage.html
+++ b/project/startingpage.html
@@ -8,6 +8,8 @@
     <title>load and start</title>
 </head>
 <body>
+
+    <!-- ჩატვირთვა -->
     <div class="kinetic" id="loader"></div>
 
     <script src="index.js"></script>
