--- a/project/allmovies.html
+++ b/project/allmovies.html
@@ -30,7 +30,7 @@
       
       </div>
 
-
+<!-- წარწერა -->
 <section>
     <div>
         <h1>
@@ -40,7 +40,7 @@
 </section>
 
 
-
+<!-- სექცია, კინოების გამოსატანად -->
 <section>
     <main id="main">
         <div class="movie">
@@ -55,20 +55,20 @@
             </div>
         </div>
     </main>
-    
 </section>
 
-<div id="myModal" class="modal">
 
-    <!-- Modal content -->
+<!-- პოპაპი ხელით -->
+<div id="myModal" class="modal">
     <div class="modal-content" id="modal-content">
       <span class="close">&times;</span>
-    </div>
-  
-  </div>
+    </div>  
+</div>
 
 
-    <footer class="footer">
+
+<!-- ფუტერი -->
+<footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="footer-col">
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </div>
-   </footer>
+</footer>
 
 
 <script src="../project/index.js"></script>
