--- a/project/contact.html
+++ b/project/contact.html
@@ -8,6 +8,8 @@
     <title>contact</title>
 </head>
 <body>
+
+    <!-- ჰედერი და ნავიგაცია -->
     <header class="row">
         <nav class="navbar">
             <a href="allmovies.html" target="_blank">AllMovies</a>
@@ -18,7 +20,7 @@
         </nav>    
     </header>
 
-    
+    <!-- ფუტერი და კონტაქტი -->
     <footer id="contact.form">
         <div class="contact-container">
             <div style="text-align:center">
@@ -45,6 +47,7 @@
                 </div>
             </div>
         </div>
+        <!-- map -->
         <iframe id="map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11916.917020458222!2d45.00277169446772!3d41.693986369420145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044117382ccf3b1%3A0xce31adc7179280dc!2z4YOa4YOY4YOa4YOdIOGDkOGDoOGDlOGDnOGDkA!5e0!3m2!1ska!2sge!4v1663945966954!5m2!1ska!2sge"
             width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
